# Salience-Aware-Tiered-KV-Cache-Compression

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  RECOMMENDATIONS.md  llama_cpp_kv_cache_assessment.md  pyproject.toml  reproduce.sh  requirements.txt
.github/workflows/: test.yml
.sisyphus/notepads/ffn-component-profiling/: learnings.md
examples/: basic_usage.py
paper/: main.tex
real_evaluation_results/: evaluation_results.json
results/: plot_tradeoff_8192.py  tradeoff_data_8192.json
salience_kv_cache/: FINAL_ASSESSMENT.md  GITHUB_README.md  QUICKSTART.md  README.md  slow_burn_validation.json
salience_kv_cache/.sisyphus/plans/: staged_optimizations.md
salience_kv_cache/paper/: main.tex
salience_kv_cache/results/: comprehensive_benchmark.json
salience_kv_cache/src/: attention_guided_scorer.py  type_prior_mock.py
salience_kv_cache/tests/: benchmark_comprehensive.py  validate_slow_burn_real.py
src/ttkv/: __init__.py  attention_scorer.py  core.py  evaluator.py  exceptions.py  ner_classifier.py  trainer.py  type_prior.py  typed.py
tests/core/: baselines.py  benchmark_comprehensive.py  generate_tradeoff_curves.py  test_core.py  test_edge_cases.py  test_hypothesis.py  test_input_validation.py  test_needle_in_haystack.py  test_pretrained_scorer.py  test_slow_burn.py
tests/experiments/: exp12_generate_heatmaps.py  exp5_table_discrepancy.py  exp7_quality_matched.py  exp8_ema_ablation.py  exp9_memory_measurement.py  exp9_memory_measurement_simple.py  exp_component_ablation.py  exp_cross_model_generalization.py  exp_domain_diversity.py
tests/integration/: test_model_integration.py
ttkv/: attention_scorer.py  core.py  type_prior.py
